# llmodule

./: .ci.sh  .gitignore  MANIFEST.in  pyproject.toml
backend/: __init__.py  cli.py  datamodel.py
backend/compile/: __init__.py  codegen.py
backend/compile/templates/: endpoint.py.tpl  evaluate.py.tpl  infer.py.tpl  signature.py.tpl
backend/database/: dbmanager.py
backend/web/: app.py
frontend/: gatsby-config.ts  package-lock.json  package.json  tsconfig.json
frontend/src/components/: atoms.tsx  header.tsx  icons.tsx  layout.tsx  types.ts  vars.ts
frontend/src/components/views/builder/: agents.tsx  build.tsx  collections.tsx  schemas.tsx
frontend/src/components/views/builder/utils/: agentconfig.tsx  collectionconfig.tsx  schemaconfig.tsx
frontend/src/styles/: global.css
